<resources>
    <string name="app_name">TEMA MYFITNESSPAL</string>
    <string name="logo">myfitnesspal™</string>
    <string name="btnInreg">SIGN UP FOR FREE</string>
    <string name="btnLogin">LOG IN</string>
    <string name="txtcreate">Create an account</string>
    <string name="txtcreate2">Create an Account</string>
    <string name="btnsignup">Sign Up with Email</string>
    <string name="txtor">OR</string>
    <string name="Continue">Continue with Apple</string>
    <string name="Continuefb">Continue with Facebook</string>
    <string name="txtwe">We will never post anything without your permission.</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="txtemail">Email</string>
    <string name="txtpass">Password</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="butonlogin">LOG IN</string>
    <string name="hintEmail">Email</string>
    <string name="hintPass">Password</string>
    <string name="eTEmailInreg">Email</string>
    <string name="eTPassInreg">Password</string>
    <string name="tWmin">10 characters minimum</string>
    <string name="eTUserName">Choose a username</string>
    <string name="UserName">4 characters minimum and 30 characters maximum</string>
    <string name="strrB">By signing up for MyfitnessPal, you are agreeing to our Privacy Policy and Terms.</string>
    <string name="butonsignup">Sign Up</string>
    <string name="JSONString">Parsare JSON</string>
</resources>