<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/eTEmail"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/eTEmailInreg"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="355dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/eTPassInreg"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTEmail"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tWmin"
        android:layout_width="193dp"
        android:layout_height="26dp"
        android:text="@string/tWmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/eTUserName"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/eTUserName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tWusername"
        android:layout_width="333dp"
        android:layout_height="24dp"
        android:text="@string/UserName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTUserName"
        app:layout_constraintVertical_bias="0.046" />

    <RadioButton
        android:id="@+id/rBTerms"
        android:layout_width="387dp"
        android:layout_height="82dp"
        android:text="@string/strrB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tWusername"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btnInregistrare"
        android:layout_width="309dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/CuloareButonInreg"
        android:text="@string/butonsignup"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rBTerms" />
</androidx.constraintlayout.widget.ConstraintLayout>