<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:drawableTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btninreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/culoarebuton"
        android:backgroundTint="@color/culoarebuton"
        android:backgroundTintMode="add"
        android:foregroundTint="#2196F3"
        android:shadowColor="#2196F3"
        android:text="@string/btnInreg"
        android:textColor="@color/culoarebuton"
        android:textSize="16sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo"
        app:layout_constraintVertical_bias="0.637"
        app:rippleColor="#2196F3"
        app:strokeColor="#2196F3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="184dp"
        android:layout_height="46dp"
        android:text="@string/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btninreg"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>